[project]
name = "pyromax"
version = "0.3"
authors = [
  { name="rast-games", email="jggtrrrdg@gmail.com" },
]
description = "Асинхронный, модульный фреймворк для юзерботов в MAX Messenger"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "pillow==12.1.0",
    "pydantic>=2.12.5",
    "qrcode==8.2",
    "websockets==16.0",
]
[project.urls]
"Homepage" = "https://github.com/rast-games/MaxUserBotLib"
"Bug Tracker" = "https://github.com/rast-games/MaxUserBotLib/issues"
