[project]
name = "pyromax"
version = "0.7.1"
authors = [
  { name="rast-games", email="jggtrrrdg@gmail.com" },
]
description = "Асинхронный, модульный фреймворк для юзерботов в MAX Messenger"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "lz4>=4.4.5",
    "magic-filter>=1.0.12",
    "msgpack>=1.1.2",
    "pillow==12.1.0",
    "pydantic>=2.12.5",
    "qrcode==8.2",
    "websockets==16.0",
]
[project.urls]
"Homepage" = "https://github.com/rast-games/MaxUserBotLib"
"Bug Tracker" = "https://github.com/rast-games/MaxUserBotLib/issues"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings[python]>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "mypy>=1.20.0",
    "mypy-upgrade>=0.0.1b6",
    "ruff>=0.15.9",
    "types-aiofiles>=25.1.0.20260408",
    "types-qrcode>=8.2.0.20260408",
    "pymdown-extensions>=10.21.2",
    "mike>=2.2.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
